--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Abhirup",
   "license": "ISC",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.16.2",
     "@maptiler/client": "^2.5.1",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
